Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-762

Range values like -10 are processed wrong

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.1.8, 2.1.7, 2.1.6, 2.1.5, 2.1.4
    • 2.1.9
    • HTTP
    • None

    Description

      A Range header like "Range: bytes=-10" should return the last 10 bytes instead it returns the first 10.
      The problem is the parsing is assuming that mime_parse_int64 on an empty string returns -1, but it returns 0.
      I will attach a patch.

      Attachments

        1. range-fix.diff
          0.7 kB
          William Bardwell

        Activity

          People

            zwoop Leif Hedstrom
            wbardwel William Bardwell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: