TS-762 Range values like -10 are processed wrong Author: William Bardwell Review: leif

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1100384 13f79535-47bb-0310-9956-ffa450edef68